--- a/HTML-CSS/flexbox/flex.css
+++ b/HTML-CSS/flexbox/flex.css
@@ -9,7 +9,7 @@
   */
 
 /* 2. item
- - order
+ - order (default 0)
  - flex-grow
  - flex-shrink
  - flex-basis : 기본 크기 지정 
@@ -74,6 +74,7 @@
 
 .item1 {
   background: #ef9a9a;
+  /* order default 0 */
   order: 2;
   /* flex-grow: 1;
 	flex-shrink: 1; */
